--- a/dashboard/static/dashboard/styles/header.css
+++ b/dashboard/static/dashboard/styles/header.css
@@ -75,7 +75,7 @@
 }
 
 #page-header .header-account-name:hover .header-account-name-main {
-    color: #6a00ff;
+    color: #fff;
 }
 #page-header .header-account-name:hover .header-account-name-alt {
     opacity: 1;
